--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<! cmd + shift + v on toggle preview->
+
 <html>
-<body>
-
-<h1>My First Heading, yes</h1>
-
-<p>My first paragraph.</p>
-
-</body>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>Code Playground</h1>
+  </body>
 </html>
